# dumpit

./: Cargo.toml  README.md
dumpit-macros/: Cargo.toml
dumpit-macros/src/: lib.rs
examples/: attributes.rs  basic.rs  enums.rs  generics.rs
src/: lib.rs
